--- a/react-protfolio/src/components/About/About.module.css
+++ b/react-protfolio/src/components/About/About.module.css
@@ -2,7 +2,8 @@
 
 .container {
   position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
+  background-color: #FFFFFF;
+  border-color:  #0D5068;
   border-radius: 15px;
   padding: 73px;
   margin-top: 129px;
@@ -12,7 +13,7 @@
 }
 
 .title {
-  color: var(--color-text);
+  color: #333333;
   font-size: 35px;
   font-weight: 700;
   letter-spacing: 1.75px;
@@ -30,7 +31,7 @@
 }
 
 .aboutItems {
-  color: var(--color-text);
+  color: #333333;
   display: flex;
   flex-direction: column;
   gap: 50px;
