--- a/react-protfolio/src/components/Experience/Experience.module.css
+++ b/react-protfolio/src/components/Experience/Experience.module.css
@@ -37,7 +37,7 @@
 }
 
 .skillImageContainer {
-  background-color: var(--color-secondary);
+  background-color: white;
   border-radius: 100%;
   display: flex;
   align-items: center;
@@ -57,7 +57,7 @@
 }
 
 .history {
-  width: 45%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -83,19 +83,19 @@
 }
 
 .historyItemDetails h3 {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 500;
 }
 
 .historyItemDetails p {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 300;
 }
 
 .historyItemDetails ul {
   margin-top: 6px;
   list-style-position: inside;
-  font-size: 25px;
+  font-size: 15px;
   list-style-type: disc;
   margin-left: 17px;
 }
