--- a/react-protfolio/src/components/Hero/Hero.module.css
+++ b/react-protfolio/src/components/Hero/Hero.module.css
@@ -77,7 +77,6 @@
   width: 50vw;
   height: 50vw;
   min-width: 350px;
-  min-width: 350px;
   top: -128px;
   left: -10vw;
   border-radius: 764px;
@@ -91,13 +90,82 @@
   width: 70vw;
   height: 50vw;
   min-width: 350px;
-  min-width: 250px;
   top: 246px;
   right: -25vw;
   border-radius: 764px;
   background: rgba(25, 55, 109, 0.7);
   filter: blur(100px);
   z-index: 0;
+}
+
+/* Raining stars effect */
+@keyframes rain {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+}
+
+.stars {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.star {
+  position: absolute;
+  background-color: white;
+  border-radius: 50%;
+  animation: rain linear infinite;
+}
+
+.star:nth-child(1) {
+  animation-duration: 2s;
+  animation-delay: -1s;
+  width: 2px;
+  height: 2px;
+  left: 20%;
+}
+
+.star:nth-child(2) {
+  animation-duration: 3s;
+  animation-delay: -2s;
+  width: 3px;
+  height: 3px;
+  left: 40%;
+}
+
+.star:nth-child(3) {
+  animation-duration: 4s;
+  animation-delay: -3s;
+  width: 4px;
+  height: 4px;
+  left: 60%;
+}
+
+.star:nth-child(4) {
+  animation-duration: 2.5s;
+  animation-delay: -1.5s;
+  width: 5px;
+  height: 5px;
+  left: 80%;
+}
+
+.star:nth-child(5) {
+  animation-duration: 3.5s;
+  animation-delay: -2.5s;
+  width: 6px;
+  height: 6px;
+  left: 90%;
 }
 
 @media screen and (max-width: 830px) {
