--- a/react-protfolio/src/components/About/About.module.css
+++ b/react-protfolio/src/components/About/About.module.css
@@ -77,13 +77,16 @@
   .content {
     flex-direction: column;
   }
-
+.title{
+  color:white;
+}
   .aboutImage {
     display: none;
   }
 
   .aboutItems {
     margin-top: 29px;
+    color:white;
   }
 
   .aboutItem {
